feat: finish step 2

--- a/src/main/resources/templates/songs.html
+++ b/src/main/resources/templates/songs.html
@@ -6,7 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Sono homepage</h1>
-    <h2 th:text="|${title} ${name}|"/> 
+     <div>
+        <h2 th:text="${title}"/>
+    </div>
 </body>
 </html>
