--- a/src/main/resources/templates/movies.html
+++ b/src/main/resources/templates/movies.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <div>
-        <h2 th:text="${title} |"/>
+        <ul>
+            <li th:each="movie : ${movies}" th:text="${movie.title}"></li>
+        </ul>
     </div>
 </body>
+
 </html>
