--- a/src/main/resources/templates/songs.html
+++ b/src/main/resources/templates/songs.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-     <div>
-        <h2 th:text="${title}"/>
+    <div>
+        <ul>
+            <li th:each="song : ${songs}" th:text="${song.title}"></li>
+        </ul>
     </div>
 </body>
+
 </html>
