--- a/src/main/resources/templates/movies.html
+++ b/src/main/resources/templates/movies.html
@@ -5,12 +5,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <th:block th:replace="~{fragments:: bootstrap}">
+    </th:block>
 </head>
 
 <body>
-    <div>
-        <ul>
-            <li th:each="movie : ${movies}" th:text="${movie.title}"></li>
+
+    <th:block th:replace="~{fragments:: navBar}"></th:block>
+    <div class="container-sm mt-5">
+        <h2 class="text-center mt-3 mb-3">Best Movies</h2>
+        <ul class="list-group text-center">
+            <li class="list-group-item list-group-item-action" th:each="movie : ${movies}">
+                <a th:href="@{'/movies/' + ${movie.id}}" th:text="${movie.title}"></a>
+            </li>
         </ul>
     </div>
 </body>
